{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 1,
  "lineage": "fdd6a0a2-80f3-bab5-0c19-953298650358",
  "resources": [
    {
      "module": "module.web",
      "mode": "data",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-088d3fbe3ca251f83",
            "description": "Allow access to RDS",
            "filter": null,
            "id": "sg-088d3fbe3ca251f83",
            "name": "production-db-access-sg",
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-0ed22240e3f77b6de",
            "description": "Allow HTTP, HTTPS, and SSH",
            "filter": null,
            "id": "sg-0ed22240e3f77b6de",
            "name": "xword-vpc-security-group",
            "tags": {
              "Name": "production-vpc-sg"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "data",
      "type": "aws_subnet",
      "name": "xword-web-subnet",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-02b7387120c40bdf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "id": "subnet-02b7387120c40bdf1",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "state": "available",
            "tags": {
              "Name": "xword-web-subnet"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:vpc/vpc-07a4b791f8bdf28a9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-045df3f6d8a9c7be1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-fabebc9c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07a4b791f8bdf28a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b39d2c4e6c85b1b0",
            "owner_id": "432883629663",
            "state": "available",
            "tags": {
              "Name": "xword-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:432883629663:instance/i-0de3f7a5edc769602",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de3f7a5edc769602",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xword",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad4b4409f75b0800",
            "private_dns": "ip-10-0-2-126.ec2.internal",
            "private_ip": "10.0.2.126",
            "public_dns": "ec2-3-87-2-137.compute-1.amazonaws.com",
            "public_ip": "3.87.2.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cce79c65882a5822",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b7387120c40bdf1",
            "tags": {
              "Name": "xword-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088d3fbe3ca251f83",
              "sg-0ed22240e3f77b6de"
            ]
          }
        }
      ]
    }
  ]
}